test/frontend/pass/index_expression.osl
void f(float x) {}
shader foo() {
    vector v = 1;
    point p = 1;
    normal n = 1;
    color c = 1;
    matrix m = 1;
    float x[3] = { 1, 1, 1 };

    f(v[0]);
    f(p[0]);
    f(n[0]);
    f(c[0]);
    f(m[0][0]);
    f(x[0]);
}
