test/frontend/fail/invalid_constructors.osl
void func() {}
shader test() {
    string s = string(0);
    matrix m = matrix("abcd");
    vector v = vector(func());
}
